--- a/index.html
+++ b/index.html
@@ -34,91 +34,81 @@
     </nav>
   </header>
 
-  <div class="d-flex justify-content-center">
-    <div class="content">
-      <h1 class="title-content mb-1">MY TASKS</h1>
-      <div class="d-flex justify-content-between mb-4 header-content">
-        <div class="d-flex flex-column gap-3">
-          <h1 class="text">To Do List </h1>
-          <p>Buat list tugas harian saya</p>
-        </div>
-        <button class="d-flex justify-content-center align-items-center button-add" onclick="addTodo()">
-          <i class="bi bi-plus-square text-white"></i>
-          <p class="text-white">Tambah tugas</p>
-        </button>
-      </div>
-      <div class="d-flex justify-content-between align-items-center mb-4 filter">
-        <p>Sort By</p>
-        <div class="d-flex justify-content-center align-items-center gap-2 button-filter">
-          <p>By Tanggal</p>
-          <i class="bi bi-caret-down-fill"></i>
-        </div>
-      </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="d-flex justify-content-center">
+          <div class="content">
+            <h1 class="title-content mb-1">MY TASKS</h1>
+            <div class="d-flex justify-content-between mb-4 header-content">
+              <div class="d-flex flex-column gap-3">
+                <h1 class="text">To Do List </h1>
+                <p>Buat list tugas harian saya</p>
+              </div>
+              <button class="d-flex justify-content-center align-items-center button-add" onclick="addTodo()">
+                <i class="bi bi-plus-square text-white"></i>
+                <p class="text-white">Tambah tugas</p>
+              </button>
+            </div>
+            <div class="d-flex justify-content-between align-items-center mb-4 filter">
+              <p>Sort By</p>
+              <div class="d-flex justify-content-center align-items-center gap-2 button-filter">
+                <p>By Tanggal</p>
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </div>
 
-      <!-- task -->
-      <div class="form">
-        <form id="form" onsubmit="submitData(); return false;">
-          <div class="d-flex justify-content-between align-items-center mb-4 task">
-            <div class="d-flex gap-2">
-              <input id="check" type="radio" onclick="check()">
-              <div class="task-desc">
-                <div class="d-flex justify-content-between">
-                  <div class="d-flex flex-column gap-2">
-                    <input class="desc-border" type="text" id="namaTugas" placeholder="Masukkan Nama Tugas">
-                    <input class="desc-border" type="text" id="desc" placeholder="Deskirpsi">
-                    <input class="desc-border" type="date" id="date">
+            <!-- task -->
+            <div class="form">
+              <form id="form" onsubmit="submitData(); return false;">
+                <div class="d-flex justify-content-between align-items-center mb-4 task">
+                  <div class="d-flex gap-2">
+                    <input id="check" type="radio" onclick="check()">
+                    <div class="task-desc">
+                      <div class="d-flex justify-content-between">
+                        <div class="d-flex flex-column gap-2">
+                          <input class="desc-border" type="text" id="namaTugas" placeholder="Masukkan Nama Tugas">
+                          <input class="desc-border" type="text" id="desc" placeholder="Deskirpsi">
+                          <input class="desc-border" type="date" id="date">
+                        </div>
+                      </div>
+                    </div>
                   </div>
+                  <button class="rounded btn-add" type="submit">Submit</button>
+              </form>
+            </div>
+
+            <div id="content"></div>
+
+            <!-- task complete-->
+            <div class="task-complete">
+              <div class="d-flex border-top gap-2 pt-3 pb-4">
+                <i class="bi bi-caret-right-fill"></i>
+                <p>Terselesaikan (3 tugas)</p>
+              </div>
+
+              <!-- <div class="d-flex justify-content-between mb-4 task">
+              <div class="d-flex gap-2">
+                <div class="check text-center text-white">
+                  <i class="bi bi-check"></i>
+                </div>
+                <div class="task-desc text-decoration-line-through">
+                  <h1>Requirements Detail</h1>
                 </div>
               </div>
-            </div>
-            <button class="rounded btn-add" type="submit">Submit</button>
-        </form>
-      </div>
+              <i class="bi bi-caret-down-fill"></i>
+            </div> -->
 
-
-      <!-- <div id="content"> -->
-      <!-- <div class="d-flex justify-content-between mb-4 task">
-          <div class="d-flex gap-2">
-            <input type="radio">
-            <div class="task-desc">
-              <div class="d-flex justify-content-between gap-2">
-                <h1>Product Design</h1>
-                <button class="news">Hari Ini</button>
-              </div>
-              <p>Tugas untuk design team</p>
             </div>
           </div>
-          <i class="bi bi-trash"></i>
-        </div> -->
-
-      <div id="content"></div>
-
-      <!-- task complete-->
-      <div class="task-complete">
-        <div class="d-flex border-top gap-2 pt-3 pb-4">
-          <i class="bi bi-caret-right-fill"></i>
-          <p>Terselesaikan (3 tugas)</p>
         </div>
-
-        <!-- <div class="d-flex justify-content-between mb-4 task">
-          <div class="d-flex gap-2">
-            <div class="check text-center text-white">
-              <i class="bi bi-check"></i>
-            </div>
-            <div class="task-desc text-decoration-line-through">
-              <h1>Requirements Detail</h1>
-            </div>
-          </div>
-          <i class="bi bi-caret-down-fill"></i>
-        </div> -->
-
       </div>
-      <!-- </div> -->
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
-    </script>
-    <script src="main.js"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+  </script>
+  <script src="main.js"></script>
 </body>
 
 </html>
